[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pybyd"
dynamic = ["version"]
description = "Async Python client for BYD vehicle telemetry API"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "pybyd contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pybyd/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pybyd"]

[tool.hatch.build.targets.wheel.force-include]
"src/pybyd/data/bangcle_tables.bin" = "pybyd/data/bangcle_tables.bin"

[tool.hatch.build.targets.sdist]
include = [
    "src/pybyd/data/bangcle_tables.bin",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/pybyd/_version.py" = ["I", "UP"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.coverage.run]
source = ["pybyd"]

[tool.coverage.report]
show_missing = true
