[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pybyd"
dynamic = ["version"]
description = "Async Python client for BYD vehicle telemetry API"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "pybyd contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "cryptography>=42.0",
    "pydantic>=2.6,<3",
    "paho-mqtt>=2.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24.0",
    "pylint>=3.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pybyd/_version.py"

[tool.hatch.build]
artifacts = [
    "src/pybyd/data/bangcle_tables.bin",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pybyd"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "tests_*.py"]
asyncio_mode = "auto"
markers = [
    "e2e: mocked end-to-end tests that exercise full client workflows",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/pybyd/_version.py" = ["I", "UP"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pylint.main]
py-version = "3.11"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-return-statements",
    "too-many-statements",
    "too-many-public-methods",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "duplicate-code",
    "protected-access",
    "broad-exception-caught",
    "import-outside-toplevel",
    "consider-using-enumerate",
    "try-except-raise",
    "invalid-name",
]

[tool.coverage.run]
source = ["pybyd"]

[tool.coverage.report]
show_missing = true
